# up-subscription-rust

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  about.hbs  about.toml  deny.toml  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: README.md  check.yaml  coverage.yaml  nightly.yaml  release_crate.yaml
tools/: startup.sh
up-subscription/: Cargo.toml
up-subscription-cli/: Cargo.toml
up-subscription-cli/src/: main.rs  modules.rs
up-subscription-cli/src/modules/: socket.rs  zenoh.rs
up-subscription/src/: configuration.rs  lib.rs  notification_manager.rs  subscription_manager.rs  usubscription.rs
up-subscription/src/common/: helpers.rs
up-subscription/src/listeners/: fetch_subscribers.rs  fetch_subscriptions.rs  register_for_notifications.rs  subscribe.rs  unregister_for_notifications.rs  unsubscribe.rs
up-subscription/src/tests/: mod.rs  notification_manager_tests.rs  subscription_manager_tests.rs  test_lib.rs  usubscription_tests.rs
up-subscription/tests/common/: mod.rs
