################################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[workspace]
resolver = "2"
members = ["up-subscription", "up-subscription-cli"]

[workspace.package]
description = "Rust implementation of the Eclipse uProtocol uSubscription specification"
documentation = "https://github.com/eclipse-uprotocol/up-spec/tree/main/up-l3/usubscription/v3"
edition = "2021"
exclude = [".vscode/*", ".github/*", "tools/*", ".gitignore"]
keywords = ["uProtocol", "uSubscription"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/up-subscription-rust"
version = "0.1.0"

[workspace.dependencies]
async-mutex = { version = "1.4" }
async-trait = { version = "0.1" }
env_logger = { version = "0.11" }
futures = { version = "0.3" }
log = { version = "0.4" }
mockall = { version = "0.12" }
protobuf = { version = "3.4" }
test-case = { version = "3.3" }
tokio = { version = "1", features = ["full"] }
up-rust = { version = "0.1.3", features = ["usubscription"] }
up-subscription = { path = "./up-subscription" }
