################################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
name = "up-subscription-cli"
description = "Rust implementation of the Eclipse uProtocol uSubscription specification, cli frontend"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.wix]
upgrade-guid = "3E48EB10-ACFD-4B07-A264-B390EE2653DD"
path-guid = "C290A21B-FDDD-46D3-B390-249F0AFDC75C"
license = false
eula = false

[features]
default = ["socket"]
socket = ["dep:up-transport-socket-rust"]
zenoh = ["dep:up-transport-zenoh"]

[dependencies]
async-mutex = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
clap-num = { version = "1.1" }
daemonize = { version = "0.5" }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true }
up-rust = { workspace = true }
up-subscription = { workspace = true }
up-transport-zenoh = { git = "https://github.com/eclipse-uprotocol/up-transport-zenoh-rust.git", rev = "f813ddac246efa782e02e85a757076a27b523f0b", optional = true }
up-transport-socket-rust = { git = "https://github.com/eclipse-uprotocol/up-transport-socket.git", rev = "78ac7ff6acba7090a79fc36b2ddca49bd93e7188", optional = true }

[dev-dependencies]
mockall = { workspace = true }
test-case = { workspace = true }
